# ayano-chatbot

./: .gitignore  Ayano_Chatbot_model.tflearn.data-00000-of-00001  Ayano_Chatbot_model.tflearn.index  LICENSE  README.md  checkpoint  data.pickle  intents.json  keep_alive.py  main.py  pyproject.toml  requirements.txt
