[tool.poetry]
name = "repl_nix_ayano-chatbot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nltk = "^3.7"
tflearn = "^0.5.0"
tensorflow = "^2.9.1"
python-dotenv = "^0.20.0"
discord = "^1.7.3"
Flask = "^2.1.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
